--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,20 @@
   <a class="navbar-brand">{{pageTitle}}</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a [routerLink]="['/welcome']" class="nav-link">Home</a>
-    </li>
-    <li class="nav-item">
-      <a [routerLink]="['/products']" class="nav-link">Product List</a>
+      <a class="nav-link"
+        [routerLink]="['/welcome']"
+        routerLinkActive="active">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link"
-        [routerLink]="['/products', 0, 'edit']">Add Product</a>
+          [routerLink]="['/products']"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact : true}">Product List</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"
+        [routerLink]="['/products', 0, 'edit']"
+        routerLinkActive="active">Add Product</a>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
